src/components/Landing/token-swap/freedom/freedom.module.scss
@import '../../../../styles/mixins';

.freedom {
  display: flex;
  align-items: center;
  padding: 10.4rem 0 10rem;
  background: var(--blue);

  .left {
    width: 65.2rem;
    margin-right: 4.8rem;
  }

  .right {
    width: 54.6rem;
    margin-bottom: 3.6rem;

    h2 {
      font-size: 5rem;
      line-height: 1.1;
      margin-bottom: 4rem;
    }

    p {
      font-size: 2.5rem;
      line-height: 1.2;
      width: 95%;
      margin-bottom: 4rem;
    }

    .btn {
      height: 7.5rem;
      padding: 0 4.9rem;
    }
  }

  @include mobile {
    flex-direction: column;
    align-items: flex-start;
    padding: 6.4rem 0 6rem;

    .left {
      width: 59rem;
      margin: 0 0 4.8rem;
    }

    .right {
      width: 69rem;
      margin: 0 auto;

      h2 {
        font-size: 3.6rem;
        margin-bottom: 2.4rem;
        width: 80%;

        br {
          display: none;
        }
      }

      p {
        font-size: 2rem;
        margin-bottom: 2.4rem;
      }

      .btn {
        height: 5.6rem;
        padding: 0 3.6rem;
      }
    }
  }
}

